Code formatting and better explanations in tutorials
* This improves code quality and makes the tutorial more educational by clearly
explaining the relationship between manual implementations and annotation processing.

* review fixes